# ghumante

backend_/: .env  .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
backend_/backend_/: asgi.py  settings.py  urls.py  wsgi.py
backend_/chatbot/: urls.py  views.py
backend_/core/: models.py  serializers.py  urls.py  views.py
backend_/core/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_email.py
backend_/firebase/: client.py  private_key.json
backend_/maps/: populate_db.py  services.py
backend_/templates/: swagger-ui.html
backend_/trip/: admin.py  apps.py  models.py  paginations.py  serializers.py  urls.py  views.py
backend_/trip/migrations/: 0001_initial.py  0002_destination_photo_hotel_photo.py  0003_rename_details_destination_description.py  0004_localtrip_user.py  0005_hotel_price_per_night.py  0006_destination_address.py  0007_destination_visiting_time.py  0008_hotel_visiting_time.py
frontend/: .gitignore  next.config.js  package.json
frontend/src/@types/: co-ordinates.d.ts  common-object-response.d.ts  destination-category.d.ts  destination-params.d.ts  destination.d.ts  enum.ts  geolocation.d.ts  hotel.d.ts  profile.d.ts  trip.d.ts
frontend/src/context/: StepContext.tsx  TripContext.tsx
frontend/src/firebase_app/: firebase.action.ts  firebase.config.ts
frontend/src/hoc/: withAuth.tsx
frontend/src/hooks/: deleted.tsx  getCurrentPage.tsx  useCurrentStep.tsx  useCustomToast.tsx  useGetByCategoryAndID.tsx  useGetCurrentUser.jsx  useGetCurrentUser.tsx  useGetDestinationCategories.tsx  useGetDestinations.tsx  useGetHotels.tsx  useGetTrips.tsx
(+50 files in other folders)
