[tool.poetry]
name = "ghumante_backend"
version = "0.1.0"
description = "ghumante ko backend ho ni yo"
authors = ["Neeraj Bhai", "CaffeineDuck"]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
Django = "^4.1.5"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
firebase-admin = "^6.0.1"
PyYAML = "^6.0"
uritemplate = "^4.1.1"
djangorestframework-gis = "^1.0"
django-types = "^0.16.0"
googlemaps = "^4.7.3"
django-cors-headers = "^3.13.0"
Pillow = "^9.4.0"
openai = "^0.26.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
